src/objects/Master_Checklist__c.object
<CustomObject>
    <fields>
        <fullName>MX_SB_VTS_ObjecionesEtapa__c</fullName>
        <description>Indica la etapa para la objeción</description>
        <label>Etapa Proceso</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Objeciones</fullName>
                </value>
                <value>
                    <fullName>Objeciones Reales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WB_CheckList_Name__c</fullName>
        <description>Nombre de la objeción.</description>
        <label>CheckList Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WB_Producto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Nombre del producto.</description>
        <label>Producto</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Master Checklist</relationshipLabel>
        <relationshipName>Master_Checklist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_WB_objecion__c</fullName>
        <description>contiene las objeciones por tipo.</description>
        <label>Objeción</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Master Checklist</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MX_WB_CheckList_Name__c</columns>
        <columns>MX_WB_Producto__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <label>Nombre de Master</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Checklist</pluralLabel>
    <recordTypes>
        <fullName>MX_SB_VTS_RecordInRealbound</fullName>
        <active>true</active>
        <label>Objeciones Reales Inbound</label>
    </recordTypes>
    <recordTypes>
        <fullName>MX_SB_VTS_RecordInbound</fullName>
        <active>true</active>
        <description>Registro para objeciones Inbound</description>
        <label>Objeciones Inbound</label>
    </recordTypes>
    <recordTypes>
        <fullName>MX_WB_objecionesReales</fullName>
        <active>true</active>
        <description>Tipo de registro que contiene las objeciones por etapa &quot;Objeciones Reales&quot; en el proceso de Telemarketing</description>
        <label>Objeciones Reales Telemarketing</label>
    </recordTypes>
    <recordTypes>
        <fullName>MX_WB_objecionesTelemarketing</fullName>
        <active>true</active>
        <description>Tipo de registro que contiene las objeciones por etapa &quot;Objeciones&quot; en el proceso de Telemarketing</description>
        <label>Objeciones Telemarketing</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>